# monolith-ark

./: Cargo.toml
src/: hash.rs  lib.rs  mds_12.rs  mds_8.rs
src/fields/: goldilocks.rs  mersenne.rs  mod.rs
src/sponge/: generic_sponge.rs  mod.rs
