[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = {version="0.4.0", features = ["crh","sponge"]}
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rand = "0.8.5"
sha3 = "0.10.8"
